--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
         <script src="https://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://unpkg.com/simple-statistics@6.0.1/dist/simple-statistics.min.js"></script>
-        <script src="https://ils.unc.edu/~gotz/courses/js/p_value.js"></script>            
+        <script src="https://ils.unc.edu/~gotz/courses/js/p_value.js"></script> 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.13.0/d3-legend.js"></script>           
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
 <body> 
     <script src="index.js"></script>
 </body>
+	
 
 </html>
+
