--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <script src="https://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="https://unpkg.com/simple-statistics@7.0.2/dist/simple-statistics.min.js"></script>
-        <script src="https://ils.unc.edu/~gotz/courses/js/p_value.js"></script>            
+        <script src="https://ils.unc.edu/~gotz/courses/js/p_value.js"></script> 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.13.0/d3-legend.js"></script>        
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
